--- a/wp-content/themes/healthkart/assets/scss/_vars.scss
+++ b/wp-content/themes/healthkart/assets/scss/_vars.scss
@@ -8,6 +8,7 @@ $theme-colors: (
   "dark-blue": #0B1B3D,
   "mobile-text":#2D3748,
   "dark-turquoise": #05BFBF,
+  "primary-hover": #009999,
   "white": #FFFFFF,
   "light-gray-1": #F2F4F8,
   "light-gray-2": #2D374833,
