--- a/wp-content/themes/healthkart/assets/scss/_single.scss
+++ b/wp-content/themes/healthkart/assets/scss/_single.scss
@@ -53,6 +53,7 @@
 		grid-gap: 0 20px;
 
 		&__profile{
+			align-self: flex-start;
 			img{
 				height: 72px;
 				width: 72px;
@@ -62,6 +63,22 @@
 		}
 
 		&__content{
+			.reviewer-name{
+				font-size: 20px;
+				line-height: 112%;
+				font-weight: 600;
+				margin-top: 10px;
+				a{
+					color:theme-color("dark-blue");
+
+					&:hover{
+						color:theme-color("dark-turquoise");
+					}
+				}
+				@media(max-width:768px){
+					font-size: 12px;;
+				}
+			}
 			.author-name{
 				margin-bottom: 10px;
 				a{
@@ -118,6 +135,9 @@
 			padding-top: 10px !important;
 			grid-gap: 0 10px;
 			&__profile{
+				min-width: 32px;
+				align-self: flex-start;
+				margin-top: 7px;
 				img{
 					height: 32px;
 					width: 32px;
@@ -549,6 +569,15 @@
 					margin: 0 0px 0 5px;
 				}
 			}
+		}
+		#footer-widgets{
+			margin-top: 20px;
+		}
+		.smaller-container, .latest-reads, .subscribe-container{
+			padding: 0 20px;
+		}
+		.divider-eyes{
+			width: calc(100% - 40px);
 		}
 	}
 }
@@ -1079,6 +1108,148 @@
 					}
 				}
 			}
+		}
+	}
+}
+
+.subscribe-container{
+	margin: 30px auto 10px;
+
+	@media(max-width:768px){
+		margin: 10px auto 0;
+	}
+}
+.subscribe-section{
+	background-color: theme-color("light-gray-1");
+	padding: 50px 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	border-radius: 10px;
+	.wrap{
+		.form-title{
+			font-size: 40px;
+			font-weight: bold;
+			margin-bottom: 11px;
+		}
+		p{
+			font-size: 20px;
+			line-height: 35px;
+			margin-bottom: 0;
+		}
+	}
+	.subscribe-form-wide{
+		margin-top: 20px;
+		.frm_fields_container{
+			display: flex;
+			position: relative;
+			grid-gap: 0;
+			.frm_submit{
+				button{
+					margin:0;
+					width: 147px;
+					padding:11px;
+					height: 40px;
+					background-color: theme-color("dark-turquoise") !important;
+					color:theme-color("dark-blue") !important;
+					text-transform: uppercase;
+					font-size: 14px;
+					font-weight: bold;
+					border:none !important;
+					outline:none !important;
+					border-radius: 8px;
+					position: absolute;
+					right: 110px;
+					top: 7.5px;
+
+					&:hover{
+						background-color: theme-color("primary-hover") !important;
+					}
+				}
+			}
+			input{
+				border-radius: 10px;
+    			max-width: 484px !important;
+    			height: 55px;
+    			border: none !important;
+    			font-size: 20px;
+    			line-height: 45px;
+    			padding: 0 20.24px;
+				box-shadow: none !important;
+				font-family: "Nunito", sans-serif !important;
+			}
+			.frm_error{
+				position: absolute;
+				bottom: -24px;
+				left: 100px;
+			}
+			.form-field{
+				padding: 0 !important;
+				margin:0 !important;
+				display: flex;
+    			justify-content: center;
+    			align-items: center;
+			}
+		}
+	}
+	.with_frm_style .frm_form_fields > fieldset{
+		padding: 0 !important;
+		margin:0 !important;
+	}
+	.frm_style_formidable-style.with_frm_style input::-webkit-input-placeholder{
+		color:theme-color("dark-blue") !important;
+		opacity: 1;
+		font-family: "Nunito", sans-serif !important;
+	}
+	@media(max-width:454px){
+		padding: 20px 16px;
+		.wrap{
+			width: 100%;
+			.form-title{
+				font-size: 20px;
+				line-height: 25px;
+				margin-bottom: 10px;
+			}
+			p{
+				font-size: 14px;
+				line-height: 20px;
+				max-width: 262px;
+				margin: 0 auto;
+			}
+		}
+		.subscribe-form-wide{
+			margin-top: 10px;
+			.frm_fields_container{
+				display: block;
+				.form-field{
+					display: block;
+				}
+				input{
+					font-size: 14px;
+					line-height: 20px;
+					height: 45px;
+					width: 100%;
+				}
+				.frm_error{
+					position: relative;
+					bottom: -5px;
+					left: 0;
+				}
+
+				.frm_submit{
+					button{
+						position: relative;
+						right: 0;
+						top: 10px;
+						width: 100%;
+						color:#2D3748 !important;
+					}
+				}
+			}
+		}
+		.frm_style_formidable-style.with_frm_style input::-webkit-input-placeholder{
+			color:#2D3748 !important;
 		}
 	}
 }
