--- a/wp-content/themes/healthkart/assets/scss/_global.scss
+++ b/wp-content/themes/healthkart/assets/scss/_global.scss
@@ -29,7 +29,7 @@ h6,
 }
 .container {
 	@media (min-width: 1200px) {
-		max-width: 1190px;
+		max-width: 1166px;
 	}
 	@media (max-width: 992px) {
 		max-width: 100%;
@@ -344,6 +344,19 @@ strong {
 .hide-desk{
 	@media(min-width:769px){
 		display: none !important;
+	}
+}
+.on-smaller{
+	&-show{
+		display: none;
+		@media(max-width:1200px) and (min-width: 769px){
+		display: block;
+		}
+	}
+	&-hide{
+		@media(max-width:1200px) and (min-width: 769px){
+			display: none !important;
+		}
 	}
 }
 
