--- a/wp-content/themes/healthkart/assets/scss/_single.scss
+++ b/wp-content/themes/healthkart/assets/scss/_single.scss
@@ -332,6 +332,9 @@
 		.entry-content {
 			margin: 0;
 			padding-top: 80px;
+			ul>li strong::before{
+				content: none;
+			}
 			table{
 				border: 0;
 			}
@@ -343,19 +346,6 @@
 			}
 			table tr:nth-child(2n+2){
 				background: #f5f5f5;
-			}
-			a{
-				color: #00bfbf;
-				span{
-					color: #272727 !important;
-				    font-weight: 400;
-				    text-decoration: underline;
-				    transition: all 0.35s ease;
-				    color: #212326 !important;
-				    &:hover{
-				    	text-decoration: none;
-				    }
-				}
 			}
 			p:first-child{
 				margin-top: 0 !important;
@@ -379,6 +369,7 @@
    				li{
 					font-size: 24px;
 					line-height: 45px !important;
+					list-style-type: auto;
 					@media (max-width: 768px){
 						font-size: 14px;
 						line-height: 20px !important;
@@ -578,6 +569,21 @@
 		}
 		.divider-eyes{
 			width: calc(100% - 40px);
+		}
+	}
+	.entry-content{
+		a{
+			color: #00bfbf;
+			text-decoration: none !important;
+			span{
+				color: #00bfbf !important;
+				font-weight: 400;
+				text-decoration: none;
+				transition: all 0.35s ease;
+				&:hover{
+					text-decoration: none;
+				}
+			}
 		}
 	}
 }
