--- a/wp-content/themes/healthkart/assets/scss/_single.scss
+++ b/wp-content/themes/healthkart/assets/scss/_single.scss
@@ -750,6 +750,11 @@
 		}
 	}
 	.entry-content{
+		strong{
+			img{
+				height: auto !important;
+			}
+		}
 		&-heading{
 		    padding: 30px 0 0;
 		    font-size: 24px !important;
