--- a/wp-content/themes/healthkart/assets/scss/_video.scss
+++ b/wp-content/themes/healthkart/assets/scss/_video.scss
@@ -38,7 +38,7 @@
 
 .video-template-default{
 	.entry-title{
-		margin-top: 52px !important;
+		margin: 52px 0 42.25px !important;
 	}
 	.embed-container { 
 		position: relative; 
