--- a/wp-content/themes/healthkart/assets/scss/_single.scss
+++ b/wp-content/themes/healthkart/assets/scss/_single.scss
@@ -50,15 +50,18 @@
 		padding: 30px 0 0 !important;
 		display: flex;
 		align-items: center;
-		grid-gap: 0 20px;
 
 		&__profile{
+			margin-right: 20px;
 			align-self: flex-start;
 			img{
 				height: 72px;
 				width: 72px;
 				border: 1px solid #707070;
 				border-radius: 100%;
+			}
+			@media(max-width:768px){
+				margin-right: 10px;
 			}
 		}
 
@@ -77,6 +80,7 @@
 				}
 				@media(max-width:768px){
 					font-size: 12px;;
+					margin-top: 5px;
 				}
 			}
 			.author-name{
@@ -117,12 +121,15 @@
 			flex-grow: 1;
 			display: flex;
 			justify-content: flex-end;
-			grid-gap: 0 15px;
 
 			&__icons{
 				font-size: 23px;
 				color:theme-color("dark-blue") !important;
 				transition: color 250ms ease-in-out;
+
+				&:not(:last-child){
+					margin-right: 15px;
+				}
 
 				&:hover{
 					color:theme-color("dark-turquoise") !important;
@@ -133,7 +140,6 @@
 	@media(max-width:768px){
 		.author{
 			padding-top: 10px !important;
-			grid-gap: 0 10px;
 			&__profile{
 				min-width: 32px;
 				align-self: flex-start;
@@ -160,10 +166,11 @@
 				}
 			}
 			&__social{
-				grid-gap:0 10px;
-
 				&__icons{
 					font-size: 14px;
+					&:not(:last-child){
+						margin-right: 10.45px;
+					}
 				}
 			}
 		}
@@ -208,13 +215,6 @@
 	}
 }
 .single-post{
-	.single-post, footer{
-		.container{
-			@media (min-width: 1200px) {
-				max-width: 1090px;
-			}
-		}
-	}
 	.single_post_page{
 		.transformation-section-single-image img{
 			height: auto;
@@ -1306,6 +1306,15 @@
 		}
 		.img-without-heading {
 			margin-top: 10px !important;
+		}
+	}
+}
+.single-post, .single-video, .single-transformation{
+	.single-post, footer{
+		.container{
+			@media (min-width: 1200px) {
+				max-width: 1090px;
+			}
 		}
 	}
 }
