--- a/wp-content/themes/healthkart/assets/scss/_category.scss
+++ b/wp-content/themes/healthkart/assets/scss/_category.scss
@@ -501,10 +501,10 @@
 	list-style-type: decimal;
 }
 
-.entry-content ul > li {
+/* .entry-content ul > li {
 	list-style-type: none;
 
-}
+} */
 .entry-content ul > li strong {
 
 	position: relative;
