--- a/wp-content/themes/healthkart/style.css
+++ b/wp-content/themes/healthkart/style.css
@@ -339,9 +339,9 @@ ul {
 	padding: 0;
 }
 
-li {
+/* li {
 	list-style-type: none;
-}
+} */
 
 hr {
 	border: 0;
@@ -1388,10 +1388,10 @@ figcaption,
 	list-style-type: decimal;
 }
 
-.entry-content ul > li {
+/* .entry-content ul > li {
 	list-style-type: none;
 
-}
+} */
 .entry-content ul > li strong {
 
 	position: relative;
