Transformation blog - changed image container size

--- a/wp-content/themes/healthkart/assets/scss/_global.scss
+++ b/wp-content/themes/healthkart/assets/scss/_global.scss
@@ -162,7 +162,7 @@ strong {
 	margin: 0;
 }
 
-.tag {
+.tag, .tax-infographic_tag, .tax-transformation_tag, .tax-video_tag {
 	.content-sidebar-wrap {
 		max-width: 1190px;
 		margin: 0 auto;
