--- a/wp-content/themes/healthkart/assets/scss/_global.scss
+++ b/wp-content/themes/healthkart/assets/scss/_global.scss
@@ -495,3 +495,123 @@ strong {
 #menu-header-left-menu li, footer li, .slick-dots li{
 	list-style-type:none !important;
 }
+
+/* component-articles-single */
+
+.component-articles-single{
+	padding: 0 10px;
+	&:not(:nth-last-child(-n+3)){
+		margin-bottom: 20px;
+	}
+	.wraper{
+		border-radius: 10px;
+		border: 2px solid theme-color("light-gray-1");
+		overflow: hidden;
+	}
+	&-image {
+		overflow: hidden;
+		position: relative;
+		.gradient-overlay{
+			opacity: 0.6;
+		}
+		img {
+			height: 243px;
+			width: 100%;
+			object-fit: cover;
+			@media (max-width: 991px) {
+				height: 140px;
+			}
+			@media (max-width: 575px) {
+				height: 130;
+			}
+		}
+		@media (max-width: 767px) {
+			padding: 0;
+		}
+		.cat-detail{
+			display: flex;
+			align-items: center;
+			position:absolute;
+			bottom:10px;
+			padding:0 20px;
+			color: #fff;
+			font-size: 18px !important;
+			line-height: 24px;
+			.dot {
+				padding: 0 6px;
+				font-size: 8px !important;
+				i {
+					vertical-align: middle;
+				}
+			}
+		}
+		a{
+			img{
+				transition: transform 250ms ease-in-out;
+			}
+			&:hover{
+				img{
+					transform: scale(1.1);
+				}
+			}
+		}
+	}
+	&-content {
+		padding: 10px 20px 25px;
+		.content-title {
+			min-height: 57px;
+			.title {
+				margin-bottom: 0;
+				line-height: 25px !important;
+				a {
+					font-size: 20px;
+					font-weight: bold;
+					color: theme-color("dark-blue");
+					transition: color 250ms ease-in-out;
+
+					&:hover{
+						color: theme-color("dark-turquoise");
+					}
+				}
+			}
+			@media(max-width:768px){
+				min-height: auto;
+			}
+		}
+		.content-description {
+			font-size: 18px;
+			line-height: 25px;
+			margin: 10px 0 0;
+			color: theme-color("dark-blue");
+
+			@media(max-width:768px){
+				font-size: 14px;
+				line-height: 22px;
+			}
+			@media(min-width:769px){
+				min-height: 50px;
+			}
+		}
+		@media(max-width:768px){
+			padding-bottom:10px;
+		}
+	}
+	@media(max-width:768px){
+		width: 100%;
+		padding:0 16px !important;
+		margin-bottom: 10px !important;
+
+		&:nth-child(3n){
+			padding-right: 16px !important;
+		}
+		&-image{
+			img{
+				height: 222px;
+			}
+			.cat-detail{
+				font-size: 14px !important;
+				line-height: 21px;
+			}
+		}
+	}
+}
