--- a/wp-content/themes/healthkart/assets/scss/_transformation.scss
+++ b/wp-content/themes/healthkart/assets/scss/_transformation.scss
@@ -237,10 +237,24 @@
 }
 
 /* archive page */
-.category .read-these-next, .post-type-archive .read-these-next{
+.category .read-these-next, .post-type-archive .read-these-next, .tag .read-these-next, .archive .read-these-next{
 	display:block;
 }
-
+.archive{
+    .transformation-section-single{
+        width: 33.33%;
+        margin-bottom:20px;
+        &:not(:nth-child(3n)){
+            padding-right:20px;
+        }
+        @media(max-width:768px){
+            width: 100%;
+            &:not(:nth-child(3n)){
+                padding-right:0px;
+            }
+        }
+    }
+}
 .post-type-archive-transformation{
     .category-name, .article-count{
         padding-left: 0 !important;
