--- a/wp-content/themes/healthkart/assets/scss/_home.scss
+++ b/wp-content/themes/healthkart/assets/scss/_home.scss
@@ -761,6 +761,7 @@
 				color: #fff;
 				font-size: 18px !important;
 				line-height: 24px;
+				font-weight: 600;
 				.dot {
 					padding: 0 6px;
 					font-size: 8px !important;
@@ -1089,6 +1090,7 @@
 				line-height: 24px;
 				display: flex;
 				align-items: center;
+				font-weight: 600;
 
 				.dot{
 					font-size: 8px;
