--- a/wp-content/themes/healthkart/assets/scss/_global.scss
+++ b/wp-content/themes/healthkart/assets/scss/_global.scss
@@ -537,6 +537,7 @@ strong {
 			color: #fff;
 			font-size: 18px !important;
 			line-height: 24px;
+			font-weight: 600;
 			.dot {
 				padding: 0 6px;
 				font-size: 8px !important;
