--- a/wp-content/themes/healthkart/assets/scss/_home.scss
+++ b/wp-content/themes/healthkart/assets/scss/_home.scss
@@ -721,12 +721,12 @@
 		left: 41%;
 	}
 	&-single {
-		width: 33.33%;
-		padding-right: 20px !important;
+		width: calc(33.33% - 14px);
+		margin-right: 20px !important;
 		margin-bottom: 20px !important;
 
 		&:nth-child(3n){
-			padding-right: 0 !important;
+			margin-right: 0 !important;
 		}
 		.wraper{
 			border-radius: 10px;
@@ -820,8 +820,9 @@
 		}
 		@media(max-width:768px){
 			width: 100%;
-			padding:0 16px !important;
+			padding:0 !important;
 			margin-bottom: 10px !important;
+			margin-right: 0 !important;
 
 			&:nth-child(3n){
 				padding-right: 16px !important;
@@ -1062,6 +1063,7 @@
 		position: relative;
 		padding:0;
 		margin-bottom: 20px;
+		max-width: calc(33.33% - 14px);
 
 		.wraper{
 			background-color: #fff;
@@ -1070,7 +1072,7 @@
 		}
 
 		&:not(:nth-child(3n)){
-			padding-right: 20px;
+			margin-right: 20px;
 		}
 		&-image {
 			height: 243px;
@@ -1168,8 +1170,9 @@
 			&-single{
 				margin-bottom: 0;
 				padding-bottom: 10px;
+				max-width: 100%;
 				&:not(:nth-child(3n)){
-					padding-right: 0;
+					margin-right: 0;
 				}
 				&-image{
 					.date-time-info{
